<resources>
    <string name="app_name">Catch-A-Spot</string>
    <string name="loading">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_text">Adresa:</string>
    <string name="num_parking_spots_text">Broj parkirnih mjesta:</string>
    <string name="price_text">Cijena:</string>
    <string name="register">Register</string>
    <string name="no_account">No account?</string>
    <string name="login">Login</string>
    <string name="cost_per_hour">Cijena po satu:</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="leave">Leave</string>
    <string name="done">Done</string>
    <string name="placeholder_address">Placeholder address</string>
    <string name="address">Adresa:</string>
    <string name="placeholder_cost">Placeholder cost</string>
    <string name="navigate">Navigate</string>
    <string name="parked">Parked</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="datum">Datum:</string>
    <string name="cijena">Cijena:</string>
    <string name="adresa">Adresa:</string>
    <string name="rent_spot">Rent spot</string>
    <string name="register_spot">Register spot</string>
    <string name="payments">Payments</string>
</resources>