<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/rentSpot"
    android:id="@+id/fragments">

    <fragment
        android:id="@+id/rentSpot"
        android:name="hr.algebra.catchaspotapp.RentSpotFragment"
        android:label="@string/rent_spot"
        tools:layout="@layout/fragment_rent_spot"/>

    <fragment
        android:id="@+id/registerSpot"
        android:name="hr.algebra.catchaspotapp.RegisterSpotFragment"
        android:label="@string/register_spot"
        tools:layout="@layout/fragment_register_spot"/>

    <fragment
        android:id="@+id/payments"
        android:name="hr.algebra.catchaspotapp.PaymentsFragment"
        android:label="@string/payments"
        tools:layout="@layout/fragment_payments"/>

</navigation>