<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/iv_height"
            android:layout_marginTop="@dimen/margin_top_20dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_20dp"
                android:text="@string/address"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:paddingRight="@dimen/padding_20dp"
                android:textSize="@dimen/text_size_20sp"
                android:text="@string/placeholder_address"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_20dp"
                android:text="@string/cost_per_hour"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/padding_20dp"
                android:textSize="@dimen/text_size_20sp"
                android:text="@string/placeholder_cost"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_40dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnNavigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigate"
                android:layout_margin="@dimen/margin_10dp"/>


            <Button
                android:id="@+id/btnParked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parked"
                android:layout_margin="@dimen/margin_10dp"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>